--- a/signup.html
+++ b/signup.html
@@ -22,7 +22,7 @@
       crossorigin="anonymous"
     ></script>
     <link rel="stylesheet" href="./assets/styles/css/main.css" />
-    <title>Sign In</title>
+    <title>Sign Up</title>
   </head>
   <body id="bodyBg">
     <main class="d-flex align-items-center min-vh-100 py-3 py-md-0">
@@ -31,7 +31,7 @@
           <div class="row no-gutters">
             <div class="col-md-6 d-flex avatar-block">
               <img
-                src="./assets/images/show-form.png"
+                src="assets/images/man.jpg"
                 alt="login"
                 class="login-card-img"
               />
@@ -46,10 +46,22 @@
                   />
                   <h1 class="title">ToDo List</h1>
                 </div>
-                <p class="login-card-description">Sign into your account</p>
+                <p class="login-card-description">Sign up your account</p>
                 <form action="#!" class="loginForm">
                   <div class="form-group">
-                    <label for="email" class="sr-only">Email</label>
+                    <label for="username" class="col-form-label"
+                      >Enter username</label
+                    >
+                    <input
+                      type="text"
+                      name="username"
+                      id="username"
+                      class="form-control"
+                      placeholder="Username"
+                    />
+                  </div>
+                  <div class="form-group">
+                    <label for="email" class="col-form-label">Email</label>
                     <input
                       type="email"
                       name="email"
@@ -59,7 +71,9 @@
                     />
                   </div>
                   <div class="form-group mb-4">
-                    <label for="password" class="sr-only">Password</label>
+                    <label for="password" class="col-form-label"
+                      >Enter password</label
+                    >
                     <input
                       type="password"
                       name="password"
@@ -68,20 +82,31 @@
                       placeholder="***********"
                     />
                   </div>
+                  <div class="form-group mb-4">
+                    <label for="passwordConfirm" class="col-form-label"
+                      >Confirm your password</label
+                    >
+                    <input
+                      type="password"
+                      name="passwordConfirm"
+                      id="passwordConfirm"
+                      class="form-control"
+                      placeholder="***********"
+                    />
+                  </div>
                   <span id="errorText"></span>
                   <input
-                    name="login"
-                    id="login"
+                    name="signup"
+                    id="signup"
                     class="btn btn-block login-btn mb-4"
                     type="button"
-                    value="Sign in"
+                    value="Sign up"
                   />
                 </form>
-                <a href="#!" class="forgot-password-link">Forgot password?</a>
-                <p class="login-card-footer-text">
-                  Don't have an account?
-                  <a href="./signup.html" class="text-reset">Register here</a>
-                </p>
+
+                <a href="./index.html" class="text-reset"
+                  >Do you have account? Sign in</a
+                >
               </div>
             </div>
           </div>
@@ -104,6 +129,6 @@
       integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
       crossorigin="anonymous"
     ></script>
-    <script type="module" src="./assets/scripts/index.js"></script>
+    <script type="module" src="./assets/scripts/indexSignUp.js"></script>
   </body>
 </html>
