--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                     value="Sign in"
                   />
                 </form>
-                <a href="#!" class="forgot-password-link">Forgot password?</a>
+                <!-- <a href="#!" class="forgot-password-link">Forgot password?</a> -->
                 <p class="login-card-footer-text">
                   Don't have an account?
                   <a href="./signup.html" class="text-reset">Register here</a>
